Prevent content jumping around while loading images

--- a/static/content-replacement.css
+++ b/static/content-replacement.css
@@ -9,6 +9,11 @@
     overflow: hidden;
 }
 
+.frozen {
+    width: var(--frozen-width);
+    height: var(--frozen-width);
+}
+
 .replaced-image::after {
     content: attr(alt);
     font-family: sans-serif;
